# Croptopia

./: .gitignore  CMakeLists.txt
dependencies/include/imgui/: imgui_impl_sdl3.cpp
dependencies/lib/Debug/SDL/: SDL3.lib  SDL3_test.lib  SDL_uclibc.lib
dependencies/lib/Release/SDL/: SDL3_test.lib  SDL_uclibc.lib
src/: main.cpp
src/game/: Game.cpp  Game.h  InputHandler.cpp  InputHandler.h
src/game/Crops/: BaseCrop.cpp  BaseCrop.h  BaseEntity.cpp  BaseEntity.h  BaseTile.cpp  BaseTile.h
src/renderer/: Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
src/utilities/: ConsoleManager.cpp  ConsoleManager.h  math.h
